<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:orientation="vertical"
    android:clipChildren="true"
    android:padding="16dp"
    tools:context=".VerSocioActivity">

    <ImageView
        android:id="@+id/volverListaSocios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:contentDescription="@string/btnVolver"
        android:onClick="btnVolverListaSocios"
        android:src="@drawable/volver" />

    <TextView
        android:id="@+id/textNombreApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text=""
        android:textColor="@color/verdeSocios"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/labelNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inputNombre"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:labelFor="@id/textNombre"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/textNombre"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/input_generico"
        android:ems="10"
        android:hint=""
        android:text=""
        android:inputType="text"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        android:visibility="visible" />

    <TextView
        android:id="@+id/labelApellido"
        android:labelFor="@id/textApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inputApellido"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/textApellido"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:hint=""
        android:text=""
        android:textColorHint="@color/black"
        android:inputType="text"
        android:textAlignment="center"
        android:visibility="visible"
        android:background="@drawable/input_generico"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:id="@+id/labelDNI"
        android:labelFor="@id/textDNI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inputDNI"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/textDNI"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:hint=""
        android:text=""
        android:textColorHint="@color/black"
        android:inputType="number"
        android:textAlignment="center"
        android:visibility="visible"
        android:background="@drawable/input_generico"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:id="@+id/labelEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inputCorreo"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/textEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:hint=""
        android:text=""
        android:textColorHint="@color/black"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:visibility="visible"
        android:background="@drawable/input_generico"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:id="@+id/labelTelefono"
        android:labelFor="@id/textPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inputTel"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/textPhone"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:hint=""
        android:text=""
        android:textColorHint="@color/black"
        android:inputType="phone"
        android:textAlignment="center"
        android:visibility="visible"
        android:background="@drawable/input_generico"
        android:layout_marginBottom="20dp"
        />

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="match_parent"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="16dp"
        android:layout_height="40dp"
        android:background="@drawable/button_primary"
        android:text="@string/editBtnDefault"
        app:backgroundTint="@null" />

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:textColor="@color/background"
        android:background="@drawable/button_secondary"
        android:text="@string/deleteBtn"
        app:backgroundTint="@null" />

</LinearLayout>
</ScrollView>