<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:clipChildren="true"
    android:padding="16dp"
    tools:context=".CrearEntrenadorActivity">

    <ImageView
        android:id="@+id/volver_editar_entrenador"
        android:layout_width="16.03dp"
        android:layout_height="23dp"
        android:layout_marginTop="21dp"
        android:src="@mipmap/flecha_volver"
        android:onClick="btnVolverListaEntrenador"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewEditarEntrenador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btnCrearEntrenador"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inputNombre"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/textNombre"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:clipToOutline="true"
        android:ems="10"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:hint="@string/inputNombre"
        android:textColorHint="@color/secondaryText"
        android:inputType="text"
        android:visibility="visible"
        android:background="@drawable/input_generico"
        android:maxLength="45"
        />

    <TextView
        android:id="@+id/labelApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inputApellido"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/textApellido"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/inputApellido"
        android:textColorHint="@color/secondaryText"
        android:inputType="text"
        android:textAlignment="center"
        android:visibility="visible"
        android:background="@drawable/input_generico"
        android:layout_marginBottom="10dp"
        android:maxLength="45"/>

    <TextView
        android:id="@+id/labelDNI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inputDNI"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/textDNI"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/inputDNI"
        android:textColorHint="@color/secondaryText"
        android:inputType="number"
        android:textAlignment="center"
        android:visibility="visible"
        android:background="@drawable/input_generico"
        android:layout_marginBottom="20dp"
        android:maxLength="8"/>

    <TextView
        android:id="@+id/labelEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inputCorreo"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/textEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/inputCorreo"
        android:textColorHint="@color/secondaryText"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:visibility="visible"
        android:background="@drawable/input_generico"
        android:layout_marginBottom="10dp"
        android:maxLength="75"/>

    <TextView
        android:id="@+id/labelTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inputTel"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/textPhone"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/inputTel"
        android:textColorHint="@color/secondaryText"
        android:inputType="phone"
        android:textAlignment="center"
        android:visibility="visible"
        android:background="@drawable/input_generico"
        android:layout_marginBottom="10dp"
        android:maxLength="10"/>

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="16dp"
        android:layout_height="40dp"
        android:background="@drawable/button_primary"
        android:text="@string/btnGuardar"
        app:backgroundTint="@null" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:textColor="@color/background"
        android:background="@drawable/button_secondary"
        android:onClick="btnCancelar"
        android:text="@string/btnCancelar"
        app:backgroundTint="@null" />

    <!--    Temporal-->
    <TextView
        android:id="@+id/textoResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="" />

</LinearLayout>