<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/background"
    android:clipChildren="true"
    android:orientation="vertical"
    tools:context=".RegistroActivity">

    <ImageView
        android:id="@+id/volver_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btnVolverRegistro"
        android:src="@drawable/volver"
        android:contentDescription="@string/btnVolver"/>

    <TextView
        android:id="@+id/textViewRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="26dp"
        android:text="Registro"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/labelEmail"
        android:labelFor="@id/textEmail"
        android:text="@string/inputCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/textEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/inputCorreo"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:visibility="visible"
        android:background="@drawable/input_generico"
        android:maxLength="75"/>

    <TextView
        android:id="@+id/emailError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/danger"
        android:textSize="18sp"
        android:textAlignment="center"
        android:visibility="gone" />

    <TextView
        android:id="@+id/labelPassword"
        android:labelFor="@id/textPassword"
        android:text="@string/inputContraseña"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/textPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/inputContraseña"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:visibility="visible"
        android:background="@drawable/input_generico"
        android:maxLength="16"/>

    <TextView
        android:id="@+id/passwordError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/danger"
        android:textSize="18sp"
        android:textAlignment="center"
        android:visibility="gone" />

    <TextView
        android:id="@+id/labelNombre"
        android:labelFor="@id/textNombre"
        android:text="@string/inputNombre"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/textNombre"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:clipToOutline="true"
        android:ems="10"
        android:hint="@string/inputNombre"
        android:inputType="text"
        android:textAlignment="center"
        android:visibility="visible"
        android:background="@drawable/input_generico"
        android:maxLength="15"
        />

    <TextView
        android:id="@+id/nombreError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/danger"
        android:textSize="18sp"
        android:textAlignment="center"
        android:visibility="gone" />

    <TextView
        android:id="@+id/labelApellido"
        android:labelFor="@id/textApellido"
        android:text="@string/inputApellido"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/textApellido"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/input_generico"
        android:ems="10"
        android:hint="@string/inputApellido"
        android:inputType="text"
        android:textAlignment="center"
        android:visibility="visible"
        android:maxLength="15"/>

    <TextView
        android:id="@+id/apellidoError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/danger"
        android:textSize="18sp"
        android:textAlignment="center"
        android:visibility="gone" />

    <TextView
        android:id="@+id/labelDNI"
        android:labelFor="@id/textDNI"
        android:text="@string/inputDNI"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/textDNI"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/input_generico"
        android:ems="10"
        android:hint="@string/inputDNI"
        android:inputType="number"
        android:textAlignment="center"
        android:visibility="visible"
        android:maxLength="8"/>

    <TextView
        android:id="@+id/dniError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/danger"
        android:textSize="18sp"
        android:textAlignment="center"
        android:visibility="gone" />

    <TextView
        android:id="@+id/labelTel"
        android:labelFor="@id/textTel"
        android:text="@string/inputTel"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/textTel"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/input_generico"
        android:ems="10"
        android:hint="@string/inputTel"
        android:inputType="phone"
        android:textAlignment="center"
        android:visibility="visible"
        android:maxLength="15"
        />

    <TextView
        android:id="@+id/telError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/danger"
        android:textSize="18sp"
        android:textAlignment="center"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnInsertar"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:background="@drawable/button_primary"
        android:text="@string/btnRegister"
        android:onClick="btnRegistro"
        android:layout_marginTop="20dp"
        app:backgroundTint="@null" />

</LinearLayout>
</ScrollView>