<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:clipChildren="true"
    android:padding="16dp"
    tools:context=".EditarSocioActivity">

    <ImageView
        android:id="@+id/volver_editar_socio"
        android:layout_width="16.03dp"
        android:layout_height="23dp"
        android:layout_marginTop="21dp"
        android:onClick="btnVolverEditarSocio"
        android:src="@mipmap/flecha_volver"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewEditarEntrenador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/h1EditarEntrenador"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSocio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Verónica Torres"
        android:textColor="@color/rojoEntrenador"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/labelNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inputNombre"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:clipToOutline="true"
        android:ems="10"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:hint="Verónica"
        android:textColorHint="@color/black"
        android:inputType="text"
        android:visibility="visible"
        android:background="@drawable/input_generico"
        android:maxLength="45"
        />

    <TextView
        android:id="@+id/labelApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inputApellido"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/editTextApellido"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="Torres"
        android:textColorHint="@color/black"
        android:inputType="text"
        android:textAlignment="center"
        android:visibility="visible"
        android:background="@drawable/input_generico"
        android:layout_marginBottom="20dp"
        android:maxLength="45"/>

    <TextView
        android:id="@+id/labelDNI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inputDNI"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/editTextNomUsuario"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="87654321"
        android:textColorHint="@color/black"
        android:inputType="text"
        android:textAlignment="center"
        android:visibility="visible"
        android:background="@drawable/input_generico"
        android:layout_marginBottom="20dp"
        android:maxLength="8"/>

    <TextView
        android:id="@+id/labelTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inputTel"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/editTextCorreo"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="0123456789"
        android:textColorHint="@color/black"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:visibility="visible"
        android:background="@drawable/input_generico"
        android:layout_marginBottom="20dp"
        android:maxLength="10"/>

    <Button
        android:id="@+id/buttonGuardar"
        android:layout_width="match_parent"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="16dp"
        android:layout_height="40dp"
        android:background="@drawable/button_primary"
        android:text="Guardar"
        android:onClick="btnGuardarSocio"
        app:backgroundTint="@null" />

    <Button
        android:id="@+id/buttonEliminar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:textColor="@color/background"
        android:background="@drawable/button_secondary"
        android:text="@string/btnCancelar"
        app:backgroundTint="@null" />

    <!--    <ImageView-->
    <!--        android:id="@+id/ivAvatarDashboard"-->
    <!--        android:layout_width="73dp"-->
    <!--        android:layout_height="73dp"-->
    <!--        android:layout_marginStart="156dp"-->
    <!--        android:layout_marginTop="60dp"-->
    <!--        android:background="@drawable/image_socio1"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/textViewEditarSocio"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

</LinearLayout>